Settings_panel: Prevent long translations from squashing the slider
and improve switch to be more consistent

--- a/styles/base.css
+++ b/styles/base.css
@@ -84,6 +84,11 @@ combobox arrow {
     min-width: 1em;
 }
 
+switch {
+    border: 0;
+    border-radius: 3em;
+}
+
 switch slider {
     border: 0;
 }
